finalizado pagina de contas

--- a/projeto/src/componentes/styles/LoginFuncionario.module.css
+++ b/projeto/src/componentes/styles/LoginFuncionario.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: #04709f;
-  height: 82%;
+  height: 100vh;
   /* padding: 4rem 0; */
 }
 
