--- a/projeto/src/componentes/styles/FiltrarFuncionario.module.css
+++ b/projeto/src/componentes/styles/FiltrarFuncionario.module.css
@@ -4,9 +4,7 @@
   align-items: center;
   flex-direction: column;
   background-color: #04709f;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  height: 100%;
 }
 
 .titulo_formulario {
